# -

./: .env.example  .gitignore  Dockerfile  Dockerfile.build  README.md  main.py  pyproject.toml
bot/config/: settings.py
