[project]
name = "sinfora-bot"
version = "2.0.0"
description = "بوت ذكي متقدم على تيليغرام مع نظام الشخصيات والاشتراكات - Advanced Arabic Telegram Bot with Character System, Multi-Admin Dashboard, PostgreSQL Database, Subscription Management, and OpenAI/Gemini Integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [
    {name = "Princess-0ops", email = "yzoher7@gmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Arabic",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]

dependencies = [
    # Telegram Bot Framework
    "aiogram==3.13.1",
    "python-telegram-bot[job-queue,rate-limiter,webhooks]>=22.3",

    # Async Support
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.11",

    # Database
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",

    # Configuration
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.1.1",

    # API & HTTP
    "requests>=2.32.5",
    "httpx[http2]>=0.28.1",
    "httpx-socks>=0.10.1",

    # Text Processing
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0",
    "html2text>=2025.4.15",
    "lxml-html-clean>=0.4.2",

    # Data Processing
    "msgspec>=0.19.0",

    # File Processing
    "pdfminer-six==20240706",
    "pillow>=11.3.0",

    # Search & Web
    "duckduckgo-search==5.3.1",
    "fake-useragent>=2.2.0",

    # Web Server
    "fastapi>=0.116.1",
    "uvicorn>=0.49.0",

    # Caching & Sessions
    "redis>=8.0.0",

    # Utilities
    "loguru>=0.7.3",
    "psutil>=7.2.2",
    "pytz>=2025.2",

    # AI Integration (Old dependencies - keeping for compatibility)
    "aient==1.2.57",
    "telegram>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
]

[tool.setuptools]
packages = ["bot"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
